--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
     "crypto": "^1.0.1",
+    "dompurify": "^3.2.6",
     "dotenv": "^17.0.1",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
     "googleapis": "^153.0.0",
+    "jsdom": "^26.1.0",
     "jsonwebtoken": "^9.0.2",
+    "marked": "^16.1.1",
     "nodemailer": "^7.0.5",
     "pg": "^8.16.3"
   },
